# RayTracer3

./: .gitignore  Cargo.toml  compile.sh  imgui.ini  launch.sh
imported_assets/Default/: box.glb
shaders/include/: bindless.slang  bindless_descriptor.slang  brdf.slang  datatypes.slang  gbuffer_helpers.slang  hit_logic.slang  math.slang  packing.slang  random.slang  spherical_harmonics.slang
shaders/old/: default_hit.slang  gizzmos.slang  interpolate_probes.slang  postprocess.slang  refrence_mode.slang  structured_importance_sampling.slang
shaders/passes/: bindless_test.slang  bindless_test2.slang  default_miss.slang  gbuffer.slang  gizzmos.slang  interpolate_probes.slang  out.slang  postprocess.slang  spherical_harmonic_conversion.slang  structured_importance_sampling.slang  trace_probes.slang
src/: main.rs
src/assets/: mod.rs  model.rs
src/assets/gltf/: image.rs  material.rs  mod.rs
src/backend/: mod.rs  physical_device.rs  raytracing.rs  render_graph.rs  swapchain.rs  utils.rs  vulkan_context.rs
src/backend/bindless/: mod.rs
src/backend/pipeline_cache/: mod.rs
src/backend/render_graph/: bake.rs  build.rs  compile.rs  mod.rs  run.rs
src/backend/vulkan/: buffer.rs  device.rs  image.rs  mod.rs  raytracing.rs  sampler.rs  swapchain.rs  utils.rs
src/components/: camera.rs  mod.rs
src/imgui/: mod.rs
src/meshopt/: encoder.rs  meshopt.rs
src/renderer/: mod.rs
src/renderer/bindless/: mod.rs
src/renderer/pipeline_cache/: mod.rs
src/renderer/render_graph/: bake.rs  build.rs  executions.rs  mod.rs  resources.rs
src/scene/: camera.rs  mod.rs
(+8 files in other folders)
