[package]
name = "RayTracer3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
ash = { version = "0.38", features = ["loaded", "debug"] }
ash-window = "0.13.0"
clippy = "0.0.302"
derivative = "2.2.0"
enum_dispatch = "0.3.13"
glam = "0.29.2"
gltf = "1.0"
gpu-allocator = { version = "0.27", default-features = false, features = ["vulkan"] }
image = "0.25.1"
imgui = { version = "0.12.0", features = ["docking"] }
imgui-rs-vulkan-renderer = "1.16.0"
imgui-winit-support = "0.13.0"
log = "0.4.20"
memoffset = "0.9.0"
once_cell = "1.21.1"
rand = "0.8.5"
raw-window-handle = "0.6.2"
simple_logger = "5.0.0"
thiserror = "2.0.9"
winit = {version = "0.30.0", features = ["x11", "wayland"] }

[patch.crates-io]
gpu-allocator = { git = 'https://github.com/Traverse-Research/gpu-allocator' }

[profile.dev.package."*"]
codegen-units = 1 # better optimizations
opt-level = 2

[profile.dev.package.ash]
opt-level = 0
